--- a/Passwordy.dll.config
+++ b/Passwordy.dll.config
@@ -34,6 +34,9 @@
             <setting name="LockAccountTime" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="AppVersion" serializeAs="String">
+                <value>0.0.1</value>
+            </setting>
         </Passwordy.Properties.Settings>
     </userSettings>
 </configuration>
